--- a/ux.html
+++ b/ux.html
@@ -87,7 +87,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698317746-ux-ui-designer'>IBI Group UX/UI Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698317746-ux-ui-designer'>IBI Group UX/UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Burnaby Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -381,11 +381,11 @@
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://instamotion.join.com/jobs/468820-senior-ux-manager-w-m-d'>Job @ InstaMotion Retail (M?nchen): (Senior) UX Ma... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://instamotion.join.com/jobs/468820-senior-ux-manager-w-m-d'>Job @ InstaMotion Retail (M?nchen): (Senior) UX Ma... | JOIN</a></h5> 
 <p><span class="badge badge-light">M?nchen M?nchen, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698426886-ui-ux-developer-consultant'>ClientSolv Technologies UI/UX Developer consultant | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698426886-ui-ux-developer-consultant'>ClientSolv Technologies UI/UX Developer consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Littleton, CO, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -415,7 +415,7 @@
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o33DafwD&__jvst=Employee&__jvsd=sqMgXhwb&__jvsc=Twitter&bid=nAFwnMwp'>Brandwatch Careers - Product/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o33DafwD&__jvst=Employee&__jvsd=sqMgXhwb&__jvsc=Twitter&bid=nAFwnMwp'>Brandwatch Careers - Product/UX Designer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -441,7 +441,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KIABI/743999698395230-modele-france-gestionnaire-de-flux-h-f-nom-du-magasin'>Kiabi Mod?le-France GESTIONNAIRE DE FLUX (H/F)  NOM DU MAGASIN | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KIABI/743999698395230-modele-france-gestionnaire-de-flux-h-f-nom-du-magasin'>Kiabi Mod?le-France GESTIONNAIRE DE FLUX (H/F)  NOM DU MAGASIN | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
